@@ -322,7 +322,15 @@
        a package in a repository it mentions package versions which are
        excluded by their \R version requirement and links to hints on
        why a package might not be found.
-    }
+
+       \item The default value for \code{options("timeout")} can be set
+       from enviromnent variable \env{R_DEFAULT_INTERNET_TIMEOUT}, still
+       defaulting to 60 (seconds) if that is not set or invalid.
+
+       This may be needed when child \R processes are doing downloads,
+       for example during the installation of source packages which
+       download jars or other forms of data.
+     }
   }
 
   \subsection{LINK-TIME OPTIMIZATION on a UNIX-ALIKE}{
